@@ -1,5 +1,6 @@
 package ru.citeck.ecos.model.permissions;
 
+import org.apache.groovy.util.Maps;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -8,8 +9,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import ru.citeck.ecos.model.EcosModelApp;
-import ru.citeck.ecos.records2.graphql.meta.value.MetaField;
-import ru.citeck.ecos.records2.predicate.PredicateService;
+import ru.citeck.ecos.records2.predicate.model.Predicate;
+import ru.citeck.ecos.records2.predicate.model.Predicates;
+import ru.citeck.ecos.records3.RecordsService;
+import ru.citeck.ecos.records3.record.atts.dto.RecordAtts;
+import ru.citeck.ecos.records3.record.dao.query.dto.query.RecordsQuery;
+import ru.citeck.ecos.webapp.api.constants.AppName;
 import ru.citeck.ecos.webapp.api.entity.EntityRef;
 import ru.citeck.ecos.webapp.lib.spring.test.extension.EcosSpringExtension;
 import ru.citeck.ecos.model.domain.permissions.dto.AttributeDto;
@@ -18,19 +23,13 @@ import ru.citeck.ecos.model.domain.permissions.dto.PermissionsDto;
 import ru.citeck.ecos.model.domain.permissions.dto.RuleDto;
 import ru.citeck.ecos.model.domain.permissions.api.records.AttributesPermissionRecordsDao;
 import ru.citeck.ecos.model.domain.permissions.service.AttributesPermissionsService;
-import ru.citeck.ecos.records2.RecordRef;
-import ru.citeck.ecos.records3.RecordsServiceFactory;
-import ru.citeck.ecos.records2.graphql.meta.value.MetaValue;
-import ru.citeck.ecos.records2.predicate.model.ValuePredicate;
-import ru.citeck.ecos.records2.request.query.RecordsQuery;
-import ru.citeck.ecos.records2.request.query.RecordsQueryResult;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(EcosSpringExtension.class)
@@ -40,28 +39,23 @@ public class AttrPermissionsRecordsDaoTest {
     @MockBean
     private AttributesPermissionsService service;
     @Autowired
-    private PredicateService predicateService;
-
-    private AttributesPermissionRecordsDao recordsDao;
+    private RecordsService recordsService;
 
     private List<EntityRef> recordRefs;
     private RecordsQuery recordsQuery;
     private AttributesPermissionWithMetaDto metaDto;
-    private MetaField metaField;
 
     @BeforeEach
     void setUp() {
 
-        recordsDao = new AttributesPermissionRecordsDao(service, predicateService);
-        recordsDao.setRecordsServiceFactory(new RecordsServiceFactory());
-
         recordRefs = Collections.singletonList(
-            RecordRef.create("attrs_permission", "test_attrs_permission")
+            EntityRef.create("attrs_permission", "test_attrs_permission")
         );
 
-        recordsQuery = new RecordsQuery();
-        recordsQuery.setQuery("query");
-        recordsQuery.setLanguage("query-lang");
+        recordsQuery = RecordsQuery.create()
+            .withSourceId(AttributesPermissionRecordsDao.ID)
+            .withQuery(Predicates.alwaysTrue())
+            .build();
 
         RuleDto rule = new RuleDto();
         rule.setAttributes(Collections.singletonList(
@@ -69,7 +63,7 @@ public class AttrPermissionsRecordsDaoTest {
 
         metaDto = new AttributesPermissionWithMetaDto();
         metaDto.setId("test_attrs_permission");
-        metaDto.setTypeRef(RecordRef.create("type", "type"));
+        metaDto.setTypeRef(EntityRef.create(AppName.EMODEL, "type", "type"));
         metaDto.setRules(Collections.singletonList(rule));
     }
 
@@ -79,71 +73,81 @@ public class AttrPermissionsRecordsDaoTest {
         when(service.getById(metaDto.getId())).thenReturn(Optional.of(metaDto));
         when(service.getByIdOrNull(metaDto.getId())).thenReturn(metaDto);
 
-        List<MetaValue> resultRecords = recordsDao.getLocalRecordsMeta(recordRefs, Mockito.any());
+        var atts = recordsService.getAtts(recordRefs, Maps.of(
+            "extId", "extId",
+            "rules", "rules[]?json",
+            "typeRef", "typeRef?id"
+        ));
 
-        assertEquals(resultRecords.size(), 1);
+        assertEquals(atts.size(), 1);
 
-        MetaValue resultRecord = resultRecords.get(0);
+        RecordAtts resultRecord = atts.get(0);
 
-        assertEquals(metaDto.getId(), resultRecord.getId());
-        assertEquals(metaDto.getId(), resultRecord.getAttribute("extId", metaField));
-        assertEquals(metaDto.getRules(), resultRecord.getAttribute("rules", metaField));
-        assertEquals(metaDto.getTypeRef(), resultRecord.getAttribute("typeRef", metaField));
+        assertEquals(metaDto.getId(), resultRecord.getId().getLocalId());
+        assertEquals(metaDto.getId(), resultRecord.getAtt("extId").asText());
+        assertEquals(metaDto.getRules(), resultRecord.getAtt("rules").asList(RuleDto.class));
+        assertEquals(metaDto.getTypeRef().toString(), resultRecord.getAtt("typeRef").asText());
     }
 
     @Test
     void testGetLocalRecordsMetaFromRecordRefsWithEmptyID() throws Exception {
 
-        List<MetaValue> resultRecords = recordsDao.getLocalRecordsMeta(
-                Collections.singletonList(RecordRef.create("attrs_permission", "")), metaField);
+        var atts = recordsService.getAtts(EntityRef.create("attrs_permission", ""), Maps.of(
+            "extId", "extId",
+            "rules", "rules[]?json",
+            "typeRef", "typeRef?id"
+        ));
 
         Mockito.verify(service, Mockito.times(0)).getById(Mockito.anyString());
 
-        assertEquals(resultRecords.size(), 1);
-
-        MetaValue resultRecord = resultRecords.get(0);
-
-        assertNull(resultRecord.getId());
-        assertNull(resultRecord.getAttribute("extId", metaField));
-        assertNull(resultRecord.getAttribute("typeRef", metaField));
-        assertEquals(resultRecord.getAttribute("rules", metaField), Collections.EMPTY_LIST);
+        assertThat(atts.getId().getLocalId()).isEmpty();
+        assertThat(atts.getAtt("extId").asText()).isEmpty();
+        assertThat(atts.getAtt("typeRef").asText()).isEmpty();
+        assertThat(atts.getAtt("rules").asList(RuleDto.class)).isEmpty();
     }
 
     @Test
     void testQueryLocalRecords() {
 
         when(service.getAll(Collections.singleton(metaDto.getId()))).thenReturn(Collections.singleton(metaDto));
-        when(service.getAll(Mockito.anyInt(), Mockito.anyInt())).thenReturn(Collections.singletonList(metaDto));
+        when(service.getAll(Mockito.anyInt(), Mockito.anyInt(), Mockito.any(Predicate.class), Mockito.anyList()))
+            .thenReturn(Collections.singletonList(metaDto));
 
-        RecordsQueryResult<AttributesPermissionRecordsDao.AttributesPermissionRecord> resultRecordsQueryResult = recordsDao
-                .queryLocalRecords(recordsQuery, metaField);
+        var queryRes = recordsService.query(recordsQuery, Maps.of(
+            "extId", "extId",
+            "rules", "rules[]?json",
+            "typeRef", "typeRef?id"
+        ));
 
-        assertEquals(resultRecordsQueryResult.getTotalCount(), 1);
-        AttributesPermissionRecordsDao.AttributesPermissionRecord resultRecord = resultRecordsQueryResult.getRecords().get(0);
+        assertEquals(queryRes.getTotalCount(), 1);
+        RecordAtts resultRecord = queryRes.getRecords().getFirst();
 
-        assertEquals(metaDto.getId(), resultRecord.getAttribute("extId", metaField));
-        assertEquals(metaDto.getRules(), resultRecord.getAttribute("rules", metaField));
-        assertEquals(metaDto.getTypeRef(), resultRecord.getAttribute("typeRef", metaField));
+        assertEquals(metaDto.getId(), resultRecord.getAtt("extId").asText());
+        assertEquals(metaDto.getRules(), resultRecord.getAtt("rules").asList(RuleDto.class));
+        assertEquals(metaDto.getTypeRef().toString(), resultRecord.getAtt("typeRef").asText());
     }
 
     @Test
     void testQueryLocalRecordsLanguageIsNotPredicate() {
 
-        recordsQuery.setLanguage("");
+        var query = recordsQuery.copy().withLanguage("").build();
 
         when(service.getAll(Mockito.anyInt(), Mockito.anyInt())).thenReturn(Collections.singletonList(metaDto));
 
-        RecordsQueryResult<AttributesPermissionRecordsDao.AttributesPermissionRecord> resultRecordsQueryResult = recordsDao
-                .queryLocalRecords(recordsQuery, metaField);
+        var recsQueryRes = recordsService.query(query, Maps.of(
+            "extId", "extId",
+            "rules", "rules[]?json",
+            "typeRef", "typeRef?id"
+        ));
 
         Mockito.verify(service, Mockito.times(0)).getAll(Mockito.anySet());
 
-        assertEquals(resultRecordsQueryResult.getTotalCount(), 1);
+        assertEquals(recsQueryRes.getTotalCount(), 1);
 
-        AttributesPermissionRecordsDao.AttributesPermissionRecord resultRecord = resultRecordsQueryResult.getRecords().get(0);
+        var resultRecord = recsQueryRes.getRecords().get(0);
 
-        assertEquals(metaDto.getId(), resultRecord.getAttribute("extId", metaField));
-        assertEquals(metaDto.getRules(), resultRecord.getAttribute("rules", metaField));
-        assertEquals(metaDto.getTypeRef(), resultRecord.getAttribute("typeRef", metaField));
+        assertEquals(metaDto.getId(), resultRecord.getAtt("extId").asText());
+        assertEquals(metaDto.getRules(), resultRecord.getAtt("rules").asList(RuleDto.class));
+        assertEquals(metaDto.getTypeRef().toString(), resultRecord.getAtt("typeRef").asText());
     }
 }
